fix: routing errors and overflow-y for project details

--- a/src/app/pages/personnal/personnal.component.scss
+++ b/src/app/pages/personnal/personnal.component.scss
@@ -60,6 +60,7 @@
   }
 
   .text-currentJob {
+    font-size: 18px;
     margin-top: 55px;
     color: #fff;
   }
@@ -70,7 +71,7 @@
   padding: 0;
   margin: 0;
 
-  display: flex;
+  display: block;
   gap: 20px;
 
   list-style: none;
@@ -117,6 +118,14 @@
 
 /* MEDIA QUERIES */
 @media (min-width: 600px) {
+  .text-currentJob {
+    font-size: 24px;
+  }
+
+  .social-list {
+    display: flex;
+  }
+
   .presentation {
     height: 100%;
     padding: 100px 0;
