--- a/src/app/pages/projects/pages/project-detail/project-detail.component.scss
+++ b/src/app/pages/projects/pages/project-detail/project-detail.component.scss
@@ -1,12 +1,9 @@
 .project-detail-popup {
-  z-index: 100;
-  position: fixed;
-  top: 0;
-  left: 0;
   width: calc(100% - (2 * 35px));
   height: 100%;
+  overflow-y: auto;
 
-  padding: 30px 35px 0 35px;
+  padding: 30px 35px;
 
   color: #fff;
   background-color: var(--cambridge-blue);
